# HTTPServer

./: .gitignore  CMakeFuncs.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Notes  conan_profile_linux_x86_release  conan_profile_windows_x64_debug  conan_profile_windows_x64_release  conan_profile_windows_x86_debug  conan_profile_windows_x86_release  conanfile.py  conanfile.txt
CMake/: FindMySQL.cmake  Findlibpqxx.cmake
cert/: certificate.crt  certificate.pem  dhparam.pem  key.key  key.pem  server.csr  server_certificate.hpp
libs/: CMakeLists.txt  Config  Config.cpp  Config.hpp  ConfigList.hpp  LibSettings.hpp  Logger.cpp  Logger.hpp  Logging  compile_traits.hpp  conditional_lock.hpp  format.hpp  json.hpp  nlohmann_additions.hpp  object_range.hpp  sha256.hpp
src/: WebServer.cpp  WebServer.hpp  fields_alloc.hpp  http_request.cpp  http_request.hpp  http_response.hpp  id_types.hpp  main.cpp  routing_table.cpp  routing_table.hpp  session_info.hpp  session_tracker.cpp  session_tracker.hpp  threadsafe.hpp
src/auth/: auth.cpp  auth.hpp
src/base/: exceptions.hpp  handle_request.cpp  handle_request.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  websocket_session.cpp  websocket_session.hpp
src/components/server/: network_component.cpp  network_component.h  task_runner_component.cpp
src/database/: session_element.cpp  session_element.hpp
src/database/mappers/: accounts_mapper.cpp  accounts_mapper.hpp  sessions_mapper.cpp  sessions_mapper.hpp
src/database/sql/: sql_handle.cpp  sql_handle.hpp  sql_helpers.hpp  sql_includes.hpp  sql_manager.cpp  sql_manager.hpp
src/load_balancer/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  WebServer.cpp  WebServer.hpp  main.cpp
src/server/auth/: auth.hpp
src/server/base/: handle_request.cpp  http_response.hpp  listener.hpp  websocket_session.hpp
src/server/components/server/: network_component.cpp  network_component.h  task_runner_component.h
src/server/database/: account_element.hpp  session_element.cpp  session_element.hpp
src/server/database/mappers/: sessions_mapper.cpp  sessions_mapper.hpp
src/server/database/sql/: sql_handle.hpp  sql_provider.cpp  sql_provider.hpp
src/sql/: sql_handle.cpp  sql_handle.hpp  sql_manager.cpp
web/: index.html  test_functions.js
